sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/PTS_PO_Line_item__c.object-meta.xml
<CustomObject>
    <label>PTS PO Line item</label>
    <nameField>
        <displayFormat>PTS-PO-LINE{0000}</displayFormat>
        <label>PTS PO Line item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTS PO Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>