sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/fields/Items_delivererd__c.field-meta.xml
<CustomField>
    <fullName>Items_delivererd__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of items delivered so far</description>
    <label>Items delivererd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>