sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/fields/PO_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PO Line Item</label>
    <referenceTo>rstk__poline__c</referenceTo>
    <relationshipLabel>PTS PO Line items</relationshipLabel>
    <relationshipName>PTS_PO_Line_items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>