sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/fields/PTS_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PTS_Line_Item__c</fullName>
    <label>PTS Line Item</label>
    <referenceTo>PTS_Line_Item__c</referenceTo>
    <relationshipLabel>PTS PO Line items</relationshipLabel>
    <relationshipName>PTS_PO_Line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>