sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/fields/Purchase_O_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_O_Line_Item__c</fullName>
    <label>Purchase Order Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>PTS PO Line items</relationshipLabel>
    <relationshipName>PTS_PO_Line_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>