sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The quantity of goods that the PO line should deliver</description>
    <inlineHelpText>The quantity of goods that are supposed to be delivered by this PO line item</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>