sfSandBoxCode/force-app/main/default/objects/PTS_PO_Line_item__c/validationRules/Validate_the_delivered_item_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_the_delivered_item_number</fullName>
    <active>true</active>
    <description>Ensure that the number of items delivered is not more than the number of items requested.</description>
    <errorConditionFormula>Items_delivererd__c &gt;  Quantity__c</errorConditionFormula>
    <errorMessage>Items delivered cannot be more than the quantity requested</errorMessage>
</ValidationRule>